--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -p tsconfig.json",
     "lint": "node_modules/.bin/eslint --ext .js,.ts .",
     "lint:fix": "node_modules/.bin/eslint --fix --ext .js,.ts .",
+    "check:clean-workspace-after-install": "git diff --quiet --exit-code",
     "check:format": "prettier --list-different \"./**/*.{ts,js,json,md}\"",
     "check:spelling": "cspell --config=.cspell.json \"**/*.{md,ts,js}\""
   },
