--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "micrograd",
   "version": "0.1.0",
   "description": "A porting of Karpathy's Micrograd to JS",
+  "bin": "demo/demo.ts",
+  "main": "src/index.ts",
+  "moduleType": [
+    "amd",
+    "es6",
+    "globals",
+    "node",
+    "yui"
+  ],
   "scripts": {
     "test": "jest --coverage",
-    "build": "tsc -p tsconfig.json",
-    "lint": "node_modules/.bin/eslint --ext .js,.ts .",
-    "lint:fix": "node_modules/.bin/eslint --fix --ext .js,.ts .",
+    "build": "tsc -p tsconfig.json && browserify dist/index.js --standalone microgradjs -o dist/microgradjs.js",
+    "lint": "node_modules/.bin/eslint -c .eslintrc.js --ext .js,.ts .",
+    "lint:fix": "node_modules/.bin/eslint -c .eslintrc.js --fix --ext .js,.ts .",
     "check:clean-workspace-after-install": "git diff --quiet --exit-code",
     "check:format": "prettier --list-different \"./**/*.{ts,js,json,md}\"",
     "prettier:fix": "prettier --write \"./**/*.{ts,js,json,md}\"",
@@ -30,17 +39,20 @@
   },
   "homepage": "https://github.com/marcofavorito/micrograd-js#readme",
   "files": [
-    "src",
-    "dist"
+    "src"
   ],
   "dependencies": {},
   "devDependencies": {
+    "rollup": "^2.22.0",
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.4",
+    "@types/node": "^14.0.23",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
+    "browserify": "^16.5.1",
     "codecov": "^3.7.0",
     "cspell": "^4.0.63",
+    "d3": "^5.16.0",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^23.18.0",
