update README and github workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: test 
 
 on:
   push:
@@ -14,7 +14,7 @@ env:
 jobs:
   tests:
     name: Tests 
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@v2
     
@@ -39,30 +39,3 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
         flags: unittest
         name: codecov
-
-  linting_and_style:
-    name: Code style and lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ env.PRIMARY_NODE_VERSION }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ env.PRIMARY_NODE_VERSION }}
-      - name: Install dependencies
-        run: |
-          yarn --ignore-engines --frozen-lockfile --ignore-scripts
-          yarn check:clean-workspace-after-install
-      - name: Build
-        run: |
-          yarn build
-
-      - name: Check code formatting
-        run: yarn check:format
-
-      - name: Lint code
-        run: yarn lint
-
-      - name: Check spelling
-        run: yarn check:spelling
-
