--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "files": [
     "src"
   ],
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "dependencies": {},
   "devDependencies": {
     "@babel/preset-typescript": "^7.10.4",
